# mcp

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  policy.py  pyproject.toml  server.py
.github/workflows/: ci.yml
hooks/: skill_watchdog.py
mcp_hub_security/: __init__.py  config.py  fail_mode.py  http_client.py  policy.py  server.py  validators.py
mcp_hub_security/hooks/: skill_watchdog.py
mcp_hub_security/schemas/: scan_result.schema.json
mcp_hub_security/tools/: mcp.py  skill.py
tests/: conftest.py  test_config.py  test_fail_mode.py  test_fail_mode_edge.py  test_http_client.py  test_hub_contract.py  test_imports.py  test_mcp_handshake.py  test_policy.py  test_smoke_wheel.py  test_tools_mcp.py  test_tools_skill.py  test_validators.py  test_watchdog.py
tools/: mcp.py  skill.py
