[project]
name = "mcp-hub-security"
version = "2.0.0"
description = "Security gate for MCP servers and Claude Code Skills"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[project.scripts]
mcp-hub-security = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "hooks"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
