[project]
name = "mcp-hub-security"
version = "2.0.1"
description = "Security gate for MCP servers and Claude Code Skills"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[project.scripts]
mcp-hub-security = "mcp_hub_security.server:main"
mcp-hub-skill-watchdog = "mcp_hub_security.hooks.skill_watchdog:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_hub_security"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".quality-loop",
    ".quality-loop/**",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
